kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-mongo
  namespace: portfolio
spec:
  selector:
    app: portfolio-mongo
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
